# symbolic-math

./: CMakeLists.txt  evaluate.c  evaluate.h  evaluator.c  evaluator.h  graph.c  graph.h  main.c  parser.c  parser.h  solver.c  solver.h  structureMain.h  structures.c  structures.h  transform.c  transform.h  transformer.c  transformer.h  util.c  util.h
algorithm/: a.out  creator.c  creator.h  derivative.c  derivative.h  derivetive_operation.c  derivetive_operations.h  parcer.c  parcer.h  parser.c  structure.h
algorithm/derivative/: derivative.c  derivative.h  derivetive_operation.c  derivetive_operations.h
algorithm/integral/: integral.c  integral.h  integral_operation.c  integral_operation.h
tree/: parser.c  parser.h  structure.c  structure.h
